# hhhg

./: CMakeLists.txt  Makefile  New Text Document.txt
kernels/: mining_kernels.cu
src/: common_types.h  cuda_miner.cu  cuda_miner.h  main.cu
src/bloom/: gpu_bloom.cu  gpu_bloom.h
src/crypto/: address_generator.cu  address_generator.h  hash_wrapper.cu  hash_wrapper.h  hybrid_processor.cu  hybrid_processor.h  secp256k1_wrapper.cu  secp256k1_wrapper.h
src/profiling/: nvtx_helpers.cu  nvtx_helpers.h
src/test/: address_generator.cu  quick_validation.cu  simple_validation.cu  test_address_generation.cu  test_base58.cu  test_crypto.cu  validation.cu
src/utils/: atomic_helpers.h  memory_manager.cu  memory_manager.h
